@@ -48,7 +48,7 @@ int		runtasktype(int);
 int		checktasks(int);
 void		die(int);
 void		start_scheduler(void);
-void		*scheduler(void);
+void		scheduler(void);
 int		locktask(char *);
 void		ulocktask(void);
 
